After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 640801 - Crash gtk_tree_view_reset_header_styles at gtktreeview.c:11871
Crash gtk_tree_view_reset_header_styles at gtktreeview.c:11871
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Class: GtkBuilder
2.99.x
Other Linux
: Normal critical
: ---
Assigned To: GtkBuilder maintainers
GtkBuilder maintainers
evolution[gtk3] evolution[express]
Depends on:
Blocks:
 
 
Reported: 2011-01-28 08:45 UTC by Akhil Laddha
Modified: 2011-02-03 19:41 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Akhil Laddha 2011-01-28 08:45:56 UTC
evolution 2.91.6
gtk+ master
glib master

In express branch, File -> search folder

Program received signal SIGSEGV, Segmentation fault.
0xb6e2e8d6 in _gtk_tree_view_reset_header_styles (tree_view=0x0) at gtktreeview.c:11871
11871	  for (columns = tree_view->priv->columns; columns; columns = columns->next)
(gdb) t a a bt full

Thread 13 (Thread 0xaafffb70 (LWP 6081))

  • #0 __lll_lock_wait
    from /lib/libpthread.so.0
  • #1 _L_lock_789
    from /lib/libpthread.so.0
  • #2 pthread_mutex_lock
    from /lib/libpthread.so.0
  • #3 g_signal_emit_valist
    at gsignal.c line 2920
  • #4 g_signal_emit
    at gsignal.c line 3040
  • #5 g_object_dispatch_properties_changed
    at gobject.c line 925
  • #6 g_object_notify_dispatcher
    at gobject.c line 330
  • #7 g_object_notify_queue_thaw
    at gobjectnotifyqueue.c line 132
  • #8 g_object_newv
    at gobject.c line 1518
  • #9 g_object_new
    at gobject.c line 1308
  • #10 camel_internet_address_new
    at camel-internet-address.c line 252
  • #11 camel_search_header_match
    at camel-search-private.c line 433
  • #12 check_header
    at camel-folder-search.c line 1128
  • #13 search_header_contains
    at camel-folder-search.c line 1166
  • #14 e_sexp_term_eval
    at e-sexp.c line 731
  • #15 term_eval_or
    at e-sexp.c line 334
  • #16 e_sexp_term_eval
    at e-sexp.c line 721
  • #17 search_match_all
    at camel-folder-search.c line 879
  • #18 e_sexp_term_eval
    at e-sexp.c line 721
  • #19 term_eval_or
    at e-sexp.c line 334
  • #20 e_sexp_term_eval
    at e-sexp.c line 721
  • #21 e_sexp_eval
    at e-sexp.c line 1545
  • #22 camel_folder_search_search
  • #23 imapx_search_by_uids
  • #24 camel_folder_search_by_uids
  • #25 folder_changed_change
    at camel-vee-folder.c line 386
  • #26 session_thread_proxy
    at camel-session.c line 321
  • #27 g_thread_pool_thread_proxy
    at gthreadpool.c line 319
  • #28 g_thread_create_proxy
    at gthread.c line 1897
  • #29 start_thread
    from /lib/libpthread.so.0
  • #30 clone
    from /lib/libc.so.6

Thread 1 (Thread 0xb5fe5850 (LWP 6068))

  • #0 _gtk_tree_view_reset_header_styles
    at gtktreeview.c line 11871
  • #1 gtk_tree_view_column_set_visible
    at gtktreeviewcolumn.c line 1884
  • #2 gtk_tree_view_column_set_property
    at gtktreeviewcolumn.c line 581
  • #3 object_set_property
    at gobject.c line 1185
  • #4 g_object_set_property
    at gobject.c line 1915
  • #5 _gtk_builder_construct
    at gtkbuilder.c line 706
  • #6 builder_construct
    at gtkbuilderparser.c line 196
  • #7 parse_child
    at gtkbuilderparser.c line 463
  • #8 start_element
    at gtkbuilderparser.c line 879
  • #9 emit_start_element
    at gmarkup.c line 984
  • #10 g_markup_parse_context_parse
    at gmarkup.c line 1324
  • #11 _gtk_builder_parser_parse_buffer
    at gtkbuilderparser.c line 1161
  • #12 gtk_builder_add_from_file
    at gtkbuilder.c line 901
  • #13 e_load_ui_builder_definition
    at e-util.c line 345
  • #14 em_vfolder_editor_new
    at em-vfolder-editor.c line 104
  • #15 vfolder_edit
    at mail-vfolder.c line 1214
  • #16 action_mail_tools_search_folders_cb
    at e-mail-shell-view-actions.c line 978
  • #17 g_cclosure_marshal_VOID__VOID
    at gmarshal.c line 79
  • #18 g_closure_invoke
    at gclosure.c line 767
  • #19 signal_emit_unlocked_R
    at gsignal.c line 3252
  • #20 g_signal_emit_valist
    at gsignal.c line 2983
  • #21 g_signal_emit
    at gsignal.c line 3040
  • #22 _gtk_action_emit_activate
    at gtkaction.c line 799
  • #23 gtk_action_activate
    at gtkaction.c line 829
  • #24 gtk_real_menu_item_activate
    at gtkmenuitem.c line 1727
  • #25 g_cclosure_marshal_VOID__VOID
    at gmarshal.c line 79
  • #26 g_type_class_meta_marshal
    at gclosure.c line 878
  • #27 g_closure_invoke
    at gclosure.c line 767
  • #28 signal_emit_unlocked_R
    at gsignal.c line 3182
  • #29 g_signal_emit_valist
    at gsignal.c line 2983
  • #30 g_signal_emit
    at gsignal.c line 3040
  • #31 gtk_widget_activate
    at gtkwidget.c line 6108
  • #32 gtk_menu_shell_activate_item
    at gtkmenushell.c line 1403
  • #33 gtk_menu_shell_button_release
    at gtkmenushell.c line 803
  • #34 gtk_menu_button_release
    at gtkmenu.c line 3484
  • #35 _gtk_marshal_BOOLEAN__BOXED
    at gtkmarshalers.c line 85
  • #36 g_type_class_meta_marshal
    at gclosure.c line 878
  • #37 g_closure_invoke
    at gclosure.c line 767
  • #38 signal_emit_unlocked_R
    at gsignal.c line 3290
  • #39 g_signal_emit_valist
    at gsignal.c line 2993
  • #40 g_signal_emit
    at gsignal.c line 3040
  • #41 gtk_widget_event_internal
    at gtkwidget.c line 6077
  • #42 gtk_widget_event
    at gtkwidget.c line 5788
  • #43 gtk_propagate_event
    at gtkmain.c line 2577
  • #44 gtk_main_do_event
    at gtkmain.c line 1852
  • #45 _gdk_event_emit
    at gdkevents.c line 71
  • #46 gdk_event_source_dispatch
    at gdkeventsource.c line 318
  • #47 g_main_dispatch
    at gmain.c line 2440
  • #48 g_main_context_dispatch
    at gmain.c line 3013
  • #49 g_main_context_iterate
    at gmain.c line 3091
  • #50 g_main_loop_run
    at gmain.c line 3299
  • #51 gtk_main
    at gtkmain.c line 1338
  • #52 main
    at main.c line 731

Comment 1 Milan Crha 2011-02-02 08:26:52 UTC
This is a gtk+ issue, thus I'm moving it there. It's crashing when parsing the filters.ui file, namely part with GtkTreeViewColumn. It happens when there is some visual property changes, like "visible" in our case:
   <object class="GtkTreeViewColumn" id="column_enabled">
       <property name="visible">False</property>
       <property name="title">Enabled</property>
       <child>
          <object class="GtkCellRendererToggle" id="cell_renderer_enabled"/>
          <attributes>
             <attribute name="active">2</attribute>
          </attributes>
       </child>
       ...

If I comment out that
       <property name="visible">False</property>
then it doesn't crash.
Comment 2 Milan Crha 2011-02-02 08:33:14 UTC
I did a workaround in evolution for this, as:
Created commit cd43759 in evo master (2.91.90+)